[project]
name = "whatsapp-business-rl"
version = "1.0.0"
description = "WhatsApp Sales RL Environment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0,<3",
    "fastapi>=0.100.0,<1",
    "uvicorn[standard]>=0.25.0,<1",
    "numpy>=1.24.0,<3",
    "requests>=2.31.0,<3",
    "openai>=2.7.2,<3",
    "gradio==5.49.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["openenv-core>=0.2.0"]

[project.urls]
Homepage = "https://huggingface.co/spaces/SIKRUTI/whatsapp-rl"
